--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
+/* #e8f9fd */
+/* #2155cd */
