basic design done

--- a/client/styles/hotelDetail.module.scss
+++ b/client/styles/hotelDetail.module.scss
@@ -9,9 +9,9 @@
     margin-top: -130px;
     margin-bottom: 50px;
     display: grid;
-    grid-template-columns: 69% 28%;
+    grid-template-columns: 69% 27%;
     grid-gap: 25px;
-    justify-content: center;
+    justify-content: space-between;
 
     .hotel_detail_left {
       h1 {
@@ -67,6 +67,61 @@
         }
       }
     }
+
+    .hotel_detail_right {
+      margin-top: 90px;
+      .mySwiper {
+        margin-right: 20px;
+        .swiper_slide2 {
+          border-radius: 5px;
+          overflow: hidden;
+
+          .swiper_slide_img2 {
+            object-fit: cover;
+          }
+        }
+      }
+
+      .hotel_detail_booking {
+        margin-top: 30px;
+        background-color: #c6dce4;
+        padding: 5px 15px 20px;
+        border-radius: 4px;
+
+        p {
+          color: rgb(70, 68, 68);
+          margin: 20px 0px 30px;
+
+          span {
+            color: black;
+            font-size: 22px;
+            font-weight: bold;
+          }
+        }
+
+        button {
+          // margin-top: 20px;
+          padding: 15px 20px;
+          cursor: pointer;
+          border-radius: 5px;
+          background: none;
+          border: none;
+          text-transform: capitalize;
+          letter-spacing: 1px;
+          font-weight: bold;
+          color: white;
+          transition: all 0.3s ease;
+          width: 100%;
+          background-color: #2155cd;
+          text-align: center;
+          font-size: 15px;
+        }
+
+        button:hover {
+          background-color: #223c7e;
+        }
+      }
+    }
   }
 }
 
@@ -74,7 +129,7 @@
   .hotel_detail {
     .hotel_detail_main {
       display: grid;
-      grid-template-columns: 95%;
+      grid-template-columns: 90%;
       grid-gap: 25px;
       justify-content: center;
 
@@ -89,14 +144,26 @@
   .hotel_detail {
     .hotel_detail_main {
       display: grid;
-      grid-template-columns: 95%;
+      grid-template-columns: 90%;
       grid-gap: 25px;
       justify-content: center;
 
       .hotel_detail_left {
         .swiper_slide {
-          height: 300px;
+          height: 270px;
+          border-radius: 5px;
         }
+
+        .hotel_detail_facilities {
+          display: grid;
+          grid-template-columns: 95%;
+          justify-content: start;
+          align-items: center;
+        }
+      }
+
+      .hotel_detail_right {
+        margin-top: 30px;
       }
     }
   }
