--- a/client/styles/blogdetail.module.scss
+++ b/client/styles/blogdetail.module.scss
@@ -67,6 +67,8 @@
         padding: 5px 15px;
         color: white;
         border-radius: 2px;
+        // width: 100%;
+        margin-left: -10px;
       }
     }
   }
