--- a/client/components/Propertys/propertys.module.scss
+++ b/client/components/Propertys/propertys.module.scss
@@ -14,6 +14,27 @@
     grid-gap: 15px;
     justify-content: center;
     align-items: center;
+    .property_item {
+      cursor: pointer;
+      .property_item_img {
+        width: 100%;
+        object-fit: cover;
+      }
+
+      .property_item_txt {
+        margin-top: -10px;
+        h3 {
+          font-weight: 700;
+          font-size: 21px;
+          text-transform: capitalize;
+        }
+
+        h4 {
+          margin-top: -15px;
+          color: rgb(121, 119, 119);
+        }
+      }
+    }
   }
 }
 
@@ -49,6 +70,13 @@
       grid-gap: 25px;
       justify-content: center;
       align-items: center;
+
+      .property_item {
+        .property_item_txt {
+          margin-top: -15px;
+          margin-bottom: -20px;
+        }
+      }
     }
   }
 }
