state management using context api

--- a/client/components/Header/header.module.scss
+++ b/client/components/Header/header.module.scss
@@ -70,6 +70,17 @@
       font-size: 25px;
     }
 
+    .username {
+      font-size: 18px;
+      padding: 8px 12px;
+      background-color: #c1efff;
+      width: 180px;
+      border-radius: 3px;
+      text-align: center;
+      margin-bottom: 20px;
+      color: #3d3c42;
+    }
+
     .reg_btn {
       padding: 15px 12px;
       cursor: pointer;
