--- a/client/components/Header/header.module.scss
+++ b/client/components/Header/header.module.scss
@@ -77,7 +77,8 @@
       width: 180px;
       border-radius: 3px;
       text-align: center;
-      margin-bottom: 20px;
+      margin-top: 80px;
+      margin-bottom: 30px;
       color: #3d3c42;
     }
 
