--- a/client/styles/signuppage.module.scss
+++ b/client/styles/signuppage.module.scss
@@ -38,6 +38,31 @@
       }
 
       .form_container {
+        .upload_img {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 20px;
+          margin: 20px 0px;
+
+          .img {
+            object-fit: cover;
+            border-radius: 50%;
+          }
+
+          .form_inp {
+            label {
+              display: flex;
+              align-items: center;
+
+              .file_icon {
+                font-size: 30px;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+
         .form_btns {
           padding: 7px 14px;
           border-radius: 4px;
