fetch blog data from mongodb

--- a/admin_dashboard/src/app.scss
+++ b/admin_dashboard/src/app.scss
@@ -157,4 +157,14 @@
       }
     }
   }
+
+  .room_page {
+    .room_page_main {
+      .room_page_table {
+        .data_grid {
+          color: gray;
+        }
+      }
+    }
+  }
 }
