--- a/client/styles/blogpage.module.scss
+++ b/client/styles/blogpage.module.scss
@@ -53,6 +53,29 @@
       padding: 20px;
       box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
       border-radius: 2px;
+
+      .tags_main {
+        display: flex;
+        flex-wrap: wrap;
+
+        span {
+          padding: 5px 10px;
+          font-size: 15px;
+          font-weight: bold;
+          //   background-color: white;
+          margin: 5px 5px;
+          cursor: pointer;
+          border: 1px solid #2155cd;
+          border-radius: 4px;
+          color: #284894;
+          transition: all 0.3s ease;
+
+          &:hover {
+            background-color: #2155cd;
+            color: white;
+          }
+        }
+      }
     }
   }
 }
