--- a/admin_dashboard/src/Pages/AddNew/New.scss
+++ b/admin_dashboard/src/Pages/AddNew/New.scss
@@ -33,55 +33,57 @@
           }
         }
 
-        .form {
+        .form_top {
           flex: 8;
-          display: grid;
-          grid-template-columns: 45% 45%;
-          justify-content: space-around;
-          grid-gap: 15px;
-          position: relative;
+          .form {
+            display: grid;
+            grid-template-columns: 45% 45%;
+            justify-content: space-around;
+            grid-gap: 15px;
+            position: relative;
 
-          .form_inp {
-            label {
-              display: flex;
-              align-items: center;
+            .form_inp {
+              label {
+                display: flex;
+                align-items: center;
+              }
+              .file_icon {
+                cursor: pointer;
+                margin-left: 10px;
+                font-size: 30px;
+              }
             }
-            .file_icon {
-              cursor: pointer;
-              margin-left: 10px;
-              font-size: 30px;
-            }
-          }
 
-          .submit_btn {
-            margin-top: 15px;
-            display: block;
-            width: 200px;
-            padding: 9px 15px;
-            border: none;
-            background: none;
-            background-color: #7451f8;
-            border: 1px solid #7451f8;
-            color: white;
-            font-size: 17px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: all 0.2s ease;
-
-            &:hover {
-              background-color: white;
-              color: #7451f8;
-              border: 1px solid #7451f8;
-            }
-          }
-
-          .select_inp {
-            select {
+            .submit_btn {
+              margin-top: 15px;
               display: block;
-              width: 100%;
-              outline: none;
-              margin-top: 5px;
-              padding: 4px 10px;
+              width: 200px;
+              padding: 9px 15px;
+              border: none;
+              background: none;
+              background-color: #7451f8;
+              border: 1px solid #7451f8;
+              color: white;
+              font-size: 17px;
+              border-radius: 4px;
+              cursor: pointer;
+              transition: all 0.2s ease;
+
+              &:hover {
+                background-color: white;
+                color: #7451f8;
+                border: 1px solid #7451f8;
+              }
+            }
+
+            .select_inp {
+              select {
+                display: block;
+                width: 100%;
+                outline: none;
+                margin-top: 5px;
+                padding: 4px 10px;
+              }
             }
           }
         }
